--- a/conf2016_viz_app/default/visualizations.conf
+++ b/conf2016_viz_app/default/visualizations.conf
@@ -2,5 +2,11 @@
 # Declare shared visualizations
 #
 
-[event_sort]
-label = Event Sort
+[rain_graph]
+label = Pluviogram
+description = Make it rain
+default_height = 400
+
+[conf_bar]
+label = Conf bar chart
+default_height = 300
